--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>g3 arcitack project</title>
+    <link rel="stylesheet" href="style/g3.css">
 </head>
-<body>
-    
+<body class="font-family">
+    <header class="bg-header">
+        <nav class="navbar display-flex">
+            <h3>G3 Architects</h3>
+            <ul class="nav-link display-flex">
+                <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link">About us</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Contack us</a></li>
+                <li class="nav-item"><a href="" class="nav-link">login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+           <div class="banner-contant">
+            <h1 class="banner-title">Brand New Group of Architects </h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="primary-btn">Explore More</button>
+           </div>
+            <img src="./images/banner.png" alt="">
+        </div>
+ 
+    </header>
 </body>
 </html>
