--- a/index.html
+++ b/index.html
@@ -27,5 +27,47 @@
         </div>
  
     </header>
+    <main class="main">
+        <section class="teams display-flex">
+            <div class="team-img-containner  ">
+                 <img src="./images/team1.png" alt="">
+                 <img src="./images/team2.png" alt="">
+                 <img src="./images/team3.png" alt="">
+                 <img src="./images/team4.png" alt="">
+            </div>
+            <div class="our-feather">
+                <h3 class="feather-heading">Quick list of Our Features</h3>
+                <p class="our-feather-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="primary-btn">Explore More</button>
+            </div>
+        </section>
+        <!-- feather will enjoy  -->
+         <section>
+            <h3 class="feather-heading">some facts</h3>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-containner">
+                <div class="fact">
+                    <img class="fact-img" src="" alt="">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-mame"></h5>
+                </div>
+                <div class="fact">
+                    <img class="fact-img" src="" alt="">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-mame"></h5>
+                </div>
+                <div class="fact">
+                    <img class="fact-img" src="" alt="">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-mame"></h5>
+                </div>
+                <div class="fact">
+                    <img class="fact-img" src="" alt="">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-mame"></h5>
+                </div>
+            
+         </section>
+    </main>
 </body>
 </html>
