sponcor section complete

--- a/index.html
+++ b/index.html
@@ -83,6 +83,21 @@
                 
             
          </section>
+         <!-- our sponsor start -->
+          <section class="our-sponsor">
+           <div class="sponsor-info">
+            <h4 class="feather-heading">Our Sponspors</h4>
+            <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+           </div>
+           <div class="sponsor-img">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+           </div>
+          </section>
+         <!-- our sponsor end -->
     </main>
 </body>
 </html>
